Fazendo exercícios com Select

--- a/Atividades/Exercícios_Curso_em_Video/ex01.md
+++ b/Atividades/Exercícios_Curso_em_Video/ex01.md
@@ -1,6 +1,8 @@
 <h1 align="center"><u>Execícios com Select</u></h1>
 
-<p>Clique <a href="/Files/BD_Curso_em_Video.sql" download><u>aqui</u></a> para fazer o download do banco de dados usado no exercício.</p>
+<p>
+<b>Crie sentenças MySQL para gerar as seguintes saídas:</b>
+</p>
 
 <p>
 <b>1. Uma lista com o nome de todas as gafanhotas.</b>
@@ -86,3 +88,47 @@ nascimento BETWEEN '1990-01-01' AND '2000-12-31';
 SELECT COUNT(*) FROM gafanhotos
 WHERE sexo = 'M' AND altura > 1.90;
 ~~~
+
+<p>
+<b>10. Uma lista com as profissões dos gafanhotos e seus respectivos quantitativos. </b>
+</p>
+
+~~~
+SELECT profissao, COUNT(profissao) FROM gafanhotos
+GROUP BY profissao;
+~~~
+
+<p>
+<b>11. Quantos gafanhotos homens e quantas mulheres nasceram após 01/Jan/2005.</b>
+</p>
+
+~~~
+SELECT sexo, COUNT(*) FROM gafanhotos
+WHERE nascimento > '2005-01-01'
+GROUP BY sexo;
+~~~
+
+<p>
+<b>12. Uma lista com os gafanhotos que nasceram fora do Brasil, mostrando o país de origem e o total de pessoas nascidas lá. Só nos interessam os países que tiverem mais de 3 gafanhotos com essa nacionalidade.</b>
+</p>
+
+~~~
+SELECT nacionalidade, COUNT(nacionalidade) FROM gafanhotos
+WHERE nacionalidade NOT IN('Brasil')
+GROUP BY nacionalidade
+HAVING COUNT(nacionalidade) > 3; 
+~~~
+
+<p>
+<b>13. Uma lista agrupada pela altura dos gafanhotos, mostrando quantas pessoas pesam mais de 100Kg e que estão acima da média de altura de todos os cadastrados.</b>
+</p>
+
+~~~
+SELECT altura, COUNT(peso) FROM gafanhotos
+WHERE peso > 100
+GROUP BY altura
+HAVING altura > (SELECT AVG(altura) FROM gafanhotos)
+ORDER BY altura;
+~~~
+
+<p><br>Clique <a href="/Files/BD_Curso_em_Video.sql" download="BD_Curso_em_Video"><u>aqui</u></a> para fazer o download do banco de dados usado no exercício.</p>
